// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component BackupDB load APP complete 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#3CC75E",
        "padding": 32,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="50"
      bbWidth="50"
      fill="none"
      focusable={false}
      height="50"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 50,
            "width": 50,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="50"
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M7.75 12L10.58 14.83L16.25 9.17004"
          propList={
            Array [
              "stroke",
            ]
          }
          stroke={4294967295}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Bold",
          "fontSize": 20,
          "marginTop": 32,
        },
      ]
    }
  >
    Importando dados para o banco
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "textAlign": "center",
        },
      ]
    }
  >
    Aguarde enquanto o finances trás todos os seus dados do seu arquivo de backup
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "marginTop": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    10
     %
  </Text>
</View>
`;

exports[`Component BackupDB load DB complete 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#3CC75E",
        "padding": 32,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="50"
      bbWidth="50"
      fill="none"
      focusable={false}
      height="50"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 50,
            "width": 50,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="50"
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M7.75 12L10.58 14.83L16.25 9.17004"
          propList={
            Array [
              "stroke",
            ]
          }
          stroke={4294967295}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Bold",
          "fontSize": 20,
          "marginTop": 32,
        },
      ]
    }
  >
    Restauração concluída
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "textAlign": "center",
        },
      ]
    }
  >
    Seus dados foram restaurados com sucesso! Você já pode usar o aplicativo normalmente
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "marginTop": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    100
     %
  </Text>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderColor": "#fff",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "marginTop": 32,
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 8,
      }
    }
    testID="closeAndReturn"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "textAlign": "center",
          },
        ]
      }
    >
      Voltar
    </Text>
  </View>
</View>
`;

exports[`Component BackupDB load DB complete 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "rgba(1, 55, 148, 0.8)",
        "padding": 32,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M22 12C22 17.52 17.52 22 12 22C6.48 22 3.11 16.44 3.11 16.44M3.11 16.44H7.63M3.11 16.44V21.44M2 12C2 6.48 6.44 2 12 2C18.67 2 22 7.56 22 7.56M22 7.56V2.56M22 7.56H17.56"
          propList={
            Array [
              "stroke",
            ]
          }
          stroke={4294967295}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Bold",
          "fontSize": 20,
          "marginTop": 32,
        },
      ]
    }
  >
    Atualizando informações
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "textAlign": "center",
        },
      ]
    }
  >
    E por fim, finances está sendo atualizado com as novas informações das suas operações
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "marginTop": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    90
     %
  </Text>
</View>
`;

exports[`Component BackupDB load data 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "rgba(1, 55, 148, 0.8)",
        "padding": 32,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      fill="none"
      focusable={false}
      height="24"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width="24"
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M22 12C22 17.52 17.52 22 12 22C6.48 22 3.11 16.44 3.11 16.44M3.11 16.44H7.63M3.11 16.44V21.44M2 12C2 6.48 6.44 2 12 2C18.67 2 22 7.56 22 7.56M22 7.56V2.56M22 7.56H17.56"
          propList={
            Array [
              "stroke",
            ]
          }
          stroke={4294967295}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Bold",
          "fontSize": 20,
          "marginTop": 32,
        },
      ]
    }
  >
    Importando dados para o banco
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "textAlign": "center",
        },
      ]
    }
  >
    Aguarde enquanto o finances trás todos os seus dados do seu arquivo de backup
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "marginTop": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    0
     %
  </Text>
</View>
`;
